fix(scrollbar): theme corner, track and resizer of nested scrollbars (#DS-5152) (#1655)

--- a/packages/components-dev/scrollbar/styles.scss
+++ b/packages/components-dev/scrollbar/styles.scss
@@ -16,3 +16,14 @@ textarea {
     white-space: nowrap;
     overflow: visible;
 }
+
+.dev-nested-scroll {
+    width: 200px;
+    height: 200px;
+    overflow: auto;
+    margin: 10px;
+}
+
+.dev-nested-scroll__content {
+    width: 800px;
+}
